[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[dependencies]
wgpu = { version = "28.0" }
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11.8"
log = "0.4"
pollster = "0.4.0"
bytemuck = { version = "1.24", features = ["derive"] }
cgmath = "0.18"

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
# Use the browser's native WebGPU backend. (Enable the `webgl` feature only
# if you explicitly want a WebGL2 fallback path.)
wgpu = { version = "28.0" }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["Document", "Window", "Element"] }
